# Meta-Analyzer

./: .gitignore  Cargo.toml  README.md  build-debug.ps1  build-release.ps1  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
content-packs/: README.md
docs/: interface-overview.md  tagging-photos.md  tagging-videos.md  user-guide.md
docs/dev/: README.md  (+5 more)
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/content_rules/: image_architecture_interiors.json  image_art_culture.json  image_business_work.json  image_cars_vehicles.json  image_custom.json  image_family_kids.json  image_fashion_style.json  image_food_cooking.json  image_general.json  image_holidays_events.json  image_music_concerts.json  image_nature_travel.json  image_pets_animals.json  image_sports_fitness.json  video_cars.json  video_cooking.json  video_custom.json  video_family.json  video_gaming.json  video_general.json  video_music.json  video_nature.json  video_parties.json  video_pets.json  video_sports.json  video_tech.json  video_travel.json  video_tutorial.json
src-tauri/icons/: icon.icns
src-tauri/src/: content_types.rs  main.rs  models.rs  paths.rs  video_models.rs  window_state.rs
src-tauri/src/commands/: dialog.rs  mod.rs  processor.rs  settings.rs  video_processor.rs
src-tauri/src/processing/: ai_client.rs  metadata.rs  mod.rs  pool.rs  prompt_builder.rs  queue.rs  video_decoder.rs  video_metadata.rs  video_prompt_builder.rs  video_queue.rs
(+19 files in other folders)
