[package]
name = "meta-analyzer"
version = "26.7.8"
edition = "2021"

[[bin]]
name = "meta-analyzer"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["custom-protocol", "devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
little_exif = "0.6"
img-parts = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
mp4ameta = "0.13"

[build-dependencies]
tauri-build = { version = "2", features = [] }
